# hello-sandbox

./: .agentplaneignore  README.md  pyproject.toml
.agentplane/: policy.yml  profiles.yml
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: agent-command.yml  agent-gate.yml  agent-ghaw.md  agent-run.yml  ci.yml
adapters/dry/: hermes.map.yml  openclaw.map.yml
docs/: notes.md  overview.md
docs/ghai-proof/: 20260723T112704Z.md  20260723T113843Z.md  20260723T114510Z.md
src/: hello.py
tests/: test_hello.py
