[project]
name = "hello-sandbox"
version = "0.1.0"
description = "A deliberately boring greeting library."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hello = "hello:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
